atividades de hoje

--- a/E01.html
+++ b/E01.html
@@ -1,16 +1,12 @@
 <script>
-    //PROBLEMA: Big Brother Dev
-    //Peça para o usuário informar a nota que o aluno que ajudou (TUTOR) obteve no terceiro trimestre.
-    //Peça também para o usuário informar a nota que o aluno ajudado obteve no terceiro trimestre.
-    //Considere que, se o aluno ajudado obteve nota maior do que o aluno que ajudou (TUTOR), o programa apresentará na tela a mensagem "CRIA MAIOR QUE O CRIADOR" e também apresentará a nota do aluno ajudado.
-    //Contudo, caso o aluno que ajudou (TUTOR) obteve maior nota, bonifique-o com um adicional de 10% da nota do aluno ajudado, e o programa apresentará a mensagem "CONTINUE ENSINANDO!" e também apresentará a nota final do aluno que ajudou (TUTOR).
+    let notaTutor = parseFloat(prompt("Digite a nota do aluno que ajudou (TUTOR) no terceiro trimestre:"));
+let notaAjudado = parseFloat(prompt("Digite a nota do aluno ajudado no terceiro trimestre:"));
 
-    //ENTRADA
-
-
-    //PROCESSAMENTO
-
-
-    //SAÍDA
+if (notaAjudado > notaTutor) {
+  alert("CRIA MAIOR QUE O CRIADOR! A nota do aluno ajudado é: " + notaAjudado);
+} else {
+  let notaFinalTutor = notaTutor + (notaAjudado * 0.1);
+  alert("CONTINUE ENSINANDO! A nota final do aluno que ajudou (TUTOR) é: " + notaFinalTutor.toFixed(2));
+}
 
 </script>
