--- a/E03.html
+++ b/E03.html
@@ -1,17 +1,29 @@
 <script>
-    //PROBLEMA: Viajar para algum lugar
-    //Peça para o usuário informar para qual estado deseja realizar a viagem. (Rio Grande do Sul-RS ou Minas Gerais-MG). Peça também para informar quantos dias ficará em viagem. O usuário também deverá informar "quantos dinheiros" (R$) possui para gastar na viagem.
-    
-    //Considere que o custo diário de viagem para "RS" será de R$ 180,00 (180) e o custo diário de viagem para "MG" será de R$ 210,00 (210).
-    
-    //Calcule se o usuário possui dinheiro suficiente para realizar a viagem para o destino que pretende. Se o usuário puder viajar, o programa apresentará a mensagem "Boa viagem" e quantos dias poderá ficar no destino, além de qual será o custo da viagem. Caso não possa viajar o programa apresentará a mensagem "Sem Férias" e também apresentará "quantos dinheiros" (R$) estão faltando para realizar a viagem.
+    const custoDiarioRS = 180;
+const custoDiarioMG = 210;
 
-    //ENTRADA
+let destino = prompt("Informe o destino da viagem (RS para Rio Grande do Sul ou MG para Minas Gerais):").toUpperCase();
+let diasViagem = parseInt(prompt("Informe a quantidade de dias que pretende ficar em viagem:"));
+let dinheiroDisponivel = parseFloat(prompt("Informe a quantia de dinheiro disponível para a viagem (R$):"));
 
+let custoDiario;
+if (destino === "RS") {
+  custoDiario = custoDiarioRS;
+} else if (destino === "MG") {
+  custoDiario = custoDiarioMG;
+} else {
+  alert("Destino inválido!");
+  throw new Error("Destino inválido!");
+}
 
-    //PROCESSAMENTO
+let custoTotal = diasViagem * custoDiario;
 
-
-    //SAÍDA
+if (dinheiroDisponivel >= custoTotal) {
+  let sobraDinheiro = dinheiroDisponivel - custoTotal;
+  alert("Boa viagem! Você poderá ficar " + diasViagem + " dias em " + destino + ". O custo total da viagem será de R$" + custoTotal.toFixed(2) + ".\nSobrou R$" + sobraDinheiro.toFixed(2));
+} else {
+  let faltaDinheiro = custoTotal - dinheiroDisponivel;
+  alert("Sem Férias! Faltam R$" + faltaDinheiro.toFixed(2) + " para realizar a viagem para " + destino + ".");
+}
 
 </script>
