--- a/E04.html
+++ b/E04.html
@@ -1,17 +1,32 @@
 <script>
-    //PROBLEMA: Vínculo empregatício
-    //Peça para o usuário informar qual a sua remuneração mensal (salário). Peça também para o usuário informar qual cargo que ocupa e quantas horas trabalha por dia. Considere 20 dias de trabalho no mês.
-    //Se o usuário for "Estagiário", e trabalhar até 6 horas diárias (inclusive), o programa deverá informar quanto recebe por hora.
-    //Se o usuário for "Estagiário", e trabalhar mais que 6 horas diárias, o programa deverá apresentar a mensagem "Precisa ser contratado", além de calcular um adicional de 50% (50/100) na sua remuneração. Apresente também quanto recebe por hora, já com o adicional previsto.
-    //Se o usuário for "Programador" e trabalhar até 8 horas diárias (inclusive), o programa deverá informar quanto recebe por hora.
-    //Se o usuário for "Programador" e trabalhar mais que 8 horas diárias, o programa deverá calcular um adicional de 30% (30/100) na sua remuneração. Apresente também quanto recebe por hora, já com o adicional previsto.
+    let remuneracaoMensal = parseFloat(prompt("Informe sua remuneração mensal (salário):"));
+    let cargo = prompt("Informe o cargo que ocupa:");
+    let horasTrabalhadas = parseInt(prompt("Informe quantas horas trabalha por dia:"));
 
-    //ENTRADA
+    let diasTrabalhados = 20;
+    let horasPorDia = horasTrabalhadas;
 
-
-    //PROCESSAMENTO
-
-
-    //SAÍDA
-
+    if (cargo === "Estagiário") {
+        if (horasTrabalhadas <= 6) {
+            let valorHora = remuneracaoMensal / (diasTrabalhados * horasPorDia);
+            alert("Você recebe R$" + valorHora.toFixed(2) + " por hora trabalhada.");
+        } else {
+            let adicional = remuneracaoMensal * 0.5;
+            let remuneracaoTotal = remuneracaoMensal + adicional;
+            let valorHora = remuneracaoTotal / (diasTrabalhados * horasPorDia);
+            alert("Precisa ser contratado. Você recebe R$" + valorHora.toFixed(2) + " por hora trabalhada (incluindo adicional de 50%).");
+        }
+    } else if (cargo === "Programador") {
+        if (horasTrabalhadas <= 8) {
+            let valorHora = remuneracaoMensal / (diasTrabalhados * horasPorDia);
+            alert("Você recebe R$" + valorHora.toFixed(2) + " por hora trabalhada.");
+        } else {
+            let adicional = remuneracaoMensal * 0.3;
+            let remuneracaoTotal = remuneracaoMensal + adicional;
+            let valorHora = remuneracaoTotal / (diasTrabalhados * horasPorDia);
+            alert("Você recebe R$" + valorHora.toFixed(2) + " por hora trabalhada (incluindo adicional de 30%).");
+        }
+    } else {
+        alert("Cargo inválido!");
+    }
 </script>
